--- a/.github/workflows/licensed.yml
+++ b/.github/workflows/licensed.yml
@@ -10,7 +10,7 @@ jobs:
     name: Check licenses
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci
+      - run: mvn install -DskipTests
       - name: Install licensed
         run: |
           cd $RUNNER_TEMP
